parser.output
   0  $accept : %entry% $end

   1  start : program EOF

   2  program :
   3          | program stmt
   4          | program fdecl

   5  vdecl : typ ID ASSIGN expr SEMI

   6  stmt_list :
   7            | stmt_list stmt

   8  elseif_list : elseif_list elseif

   9  elseif : ELSEIF LPAREN expr RPAREN stmt

  10  stmt : expr SEMI
  11       | vdecl
  12       | LBRACE stmt_list RBRACE
  13       | RETURN expr SEMI
  14       | IF LPAREN expr RPAREN stmt
  15       | IF LPAREN expr RPAREN stmt elseif_list ENDELIF
  16       | IF LPAREN expr RPAREN stmt ELSE stmt
  17       | IF LPAREN expr RPAREN stmt elseif_list ELSE stmt
  18       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  19       | FOR LPAREN expr IN expr RPAREN stmt
  20       | WHILE LPAREN expr RPAREN stmt
  21       | BREAK SEMI
  22       | CONTINUE SEMI

  23  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  24  formals_opt :
  25              | formal_list

  26  formal_list : typ ID
  27              | formal_list COMMA typ ID

  28  typ : NUM
  29      | BOOL
  30      | STR
  31      | VOID
  32      | LIST

  33  expr_opt :
  34           | expr

  35  expr : LITERAL
  36       | STRING
  37       | TRUE
  38       | FALSE
  39       | ID
  40       | NULL
  41       | expr PLUS expr
  42       | expr MINUS expr
  43       | expr TIMES expr
  44       | expr DIVIDE expr
  45       | expr MOD expr
  46       | expr EQ expr
  47       | expr NEQ expr
  48       | expr LT expr
  49       | expr LEQ expr
  50       | expr GT expr
  51       | expr GEQ expr
  52       | expr AND expr
  53       | expr OR expr
  54       | MINUS expr
  55       | NOT expr
  56       | ID ASSIGN expr
  57       | ID LBRACKET expr RBRACKET ASSIGN expr
  58       | ID LBRACKET expr RBRACKET
  59       | LBRACKET list_opt RBRACKET
  60       | ID LPAREN list_opt RPAREN
  61       | LPAREN expr RPAREN
  62       | ID DOT ID LPAREN list_opt RPAREN

  63  list_opt :
  64           | list

  65  list : expr
  66       | list COMMA expr

  67  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (67)
	program : .  (2)

	.  reduce 2

	start  goto 3
	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' start .  (67)

	.  reduce 67


state 4
	start : program . EOF  (1)
	program : program . stmt  (3)
	program : program . fdecl  (4)

	LPAREN  shift 5
	LBRACKET  shift 6
	LBRACE  shift 7
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	RETURN  shift 12
	IF  shift 13
	FOR  shift 14
	WHILE  shift 15
	BREAK  shift 16
	CONTINUE  shift 17
	NUM  shift 18
	STR  shift 19
	BOOL  shift 20
	VOID  shift 21
	LIST  shift 22
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	EOF  shift 27
	.  error

	stmt  goto 28
	fdecl  goto 29
	vdecl  goto 30
	typ  goto 31
	expr  goto 32


state 5
	expr : LPAREN . expr RPAREN  (61)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 33


state 6
	expr : LBRACKET . list_opt RBRACKET  (59)
	list_opt : .  (63)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	RBRACKET  reduce 63

	expr  goto 34
	list_opt  goto 35
	list  goto 36


state 7
	stmt : LBRACE . stmt_list RBRACE  (12)
	stmt_list : .  (6)

	.  reduce 6

	stmt_list  goto 37


state 8
	expr : MINUS . expr  (54)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 38


state 9
	expr : NOT . expr  (55)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 39


state 10
	expr : TRUE .  (37)

	.  reduce 37


state 11
	expr : FALSE .  (38)

	.  reduce 38


state 12
	stmt : RETURN . expr SEMI  (13)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 40


state 13
	stmt : IF . LPAREN expr RPAREN stmt  (14)
	stmt : IF . LPAREN expr RPAREN stmt elseif_list ENDELIF  (15)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (16)
	stmt : IF . LPAREN expr RPAREN stmt elseif_list ELSE stmt  (17)

	LPAREN  shift 41
	.  error


state 14
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (18)
	stmt : FOR . LPAREN expr IN expr RPAREN stmt  (19)

	LPAREN  shift 42
	.  error


state 15
	stmt : WHILE . LPAREN expr RPAREN stmt  (20)

	LPAREN  shift 43
	.  error


state 16
	stmt : BREAK . SEMI  (21)

	SEMI  shift 44
	.  error


state 17
	stmt : CONTINUE . SEMI  (22)

	SEMI  shift 45
	.  error


state 18
	typ : NUM .  (28)

	.  reduce 28


state 19
	typ : STR .  (30)

	.  reduce 30


state 20
	typ : BOOL .  (29)

	.  reduce 29


state 21
	typ : VOID .  (31)

	.  reduce 31


state 22
	typ : LIST .  (32)

	.  reduce 32


state 23
	expr : NULL .  (40)

	.  reduce 40


state 24
	expr : LITERAL .  (35)

	.  reduce 35


state 25
	expr : ID .  (39)
	expr : ID . ASSIGN expr  (56)
	expr : ID . LBRACKET expr RBRACKET ASSIGN expr  (57)
	expr : ID . LBRACKET expr RBRACKET  (58)
	expr : ID . LPAREN list_opt RPAREN  (60)
	expr : ID . DOT ID LPAREN list_opt RPAREN  (62)

	LPAREN  shift 46
	LBRACKET  shift 47
	DOT  shift 48
	ASSIGN  shift 49
	SEMI  reduce 39
	RPAREN  reduce 39
	RBRACKET  reduce 39
	COMMA  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	TIMES  reduce 39
	DIVIDE  reduce 39
	MOD  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LEQ  reduce 39
	GT  reduce 39
	GEQ  reduce 39
	AND  reduce 39
	OR  reduce 39
	IN  reduce 39


state 26
	expr : STRING .  (36)

	.  reduce 36


state 27
	start : program EOF .  (1)

	.  reduce 1


state 28
	program : program stmt .  (3)

	.  reduce 3


state 29
	program : program fdecl .  (4)

	.  reduce 4


state 30
	stmt : vdecl .  (11)

	.  reduce 11


state 31
	vdecl : typ . ID ASSIGN expr SEMI  (5)
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (23)

	ID  shift 50
	.  error


state 32
	stmt : expr . SEMI  (10)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 51
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	.  error


state 33
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : LPAREN expr . RPAREN  (61)

	RPAREN  shift 65
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	.  error


state 34
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	list : expr .  (65)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	RPAREN  reduce 65
	RBRACKET  reduce 65
	COMMA  reduce 65


state 35
	expr : LBRACKET list_opt . RBRACKET  (59)

	RBRACKET  shift 66
	.  error


state 36
	list_opt : list .  (64)
	list : list . COMMA expr  (66)

	COMMA  shift 67
	RPAREN  reduce 64
	RBRACKET  reduce 64


state 37
	stmt_list : stmt_list . stmt  (7)
	stmt : LBRACE stmt_list . RBRACE  (12)

	LPAREN  shift 5
	LBRACKET  shift 6
	LBRACE  shift 7
	RBRACE  shift 68
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	RETURN  shift 12
	IF  shift 13
	FOR  shift 14
	WHILE  shift 15
	BREAK  shift 16
	CONTINUE  shift 17
	NUM  shift 18
	STR  shift 19
	BOOL  shift 20
	VOID  shift 21
	LIST  shift 22
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	stmt  goto 69
	vdecl  goto 30
	typ  goto 70
	expr  goto 32


state 38
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : MINUS expr .  (54)

	.  reduce 54


state 39
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : NOT expr .  (55)

	.  reduce 55


state 40
	stmt : RETURN expr . SEMI  (13)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 71
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	.  error


state 41
	stmt : IF LPAREN . expr RPAREN stmt  (14)
	stmt : IF LPAREN . expr RPAREN stmt elseif_list ENDELIF  (15)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (16)
	stmt : IF LPAREN . expr RPAREN stmt elseif_list ELSE stmt  (17)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 72


state 42
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (18)
	stmt : FOR LPAREN . expr IN expr RPAREN stmt  (19)
	expr_opt : .  (33)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	SEMI  reduce 33

	expr  goto 73
	expr_opt  goto 74


state 43
	stmt : WHILE LPAREN . expr RPAREN stmt  (20)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 75


state 44
	stmt : BREAK SEMI .  (21)

	.  reduce 21


state 45
	stmt : CONTINUE SEMI .  (22)

	.  reduce 22


state 46
	expr : ID LPAREN . list_opt RPAREN  (60)
	list_opt : .  (63)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	RPAREN  reduce 63

	expr  goto 34
	list_opt  goto 76
	list  goto 36


state 47
	expr : ID LBRACKET . expr RBRACKET ASSIGN expr  (57)
	expr : ID LBRACKET . expr RBRACKET  (58)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 77


state 48
	expr : ID DOT . ID LPAREN list_opt RPAREN  (62)

	ID  shift 78
	.  error


state 49
	expr : ID ASSIGN . expr  (56)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 79


state 50
	vdecl : typ ID . ASSIGN expr SEMI  (5)
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (23)

	LPAREN  shift 80
	ASSIGN  shift 81
	.  error


state 51
	stmt : expr SEMI .  (10)

	.  reduce 10


state 52
	expr : expr PLUS . expr  (41)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 82


state 53
	expr : expr MINUS . expr  (42)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 83


state 54
	expr : expr TIMES . expr  (43)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 84


state 55
	expr : expr DIVIDE . expr  (44)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 85


state 56
	expr : expr MOD . expr  (45)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 86


state 57
	expr : expr EQ . expr  (46)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 87


state 58
	expr : expr NEQ . expr  (47)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 88


state 59
	expr : expr LT . expr  (48)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 89


state 60
	expr : expr LEQ . expr  (49)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 90


state 61
	expr : expr GT . expr  (50)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 91


state 62
	expr : expr GEQ . expr  (51)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 92


state 63
	expr : expr AND . expr  (52)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 93


state 64
	expr : expr OR . expr  (53)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 94


state 65
	expr : LPAREN expr RPAREN .  (61)

	.  reduce 61


state 66
	expr : LBRACKET list_opt RBRACKET .  (59)

	.  reduce 59


state 67
	list : list COMMA . expr  (66)

	LPAREN  shift 5
	LBRACKET  shift 6
	MINUS  shift 8
	NOT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	NULL  shift 23
	LITERAL  shift 24
	ID  shift 25
	STRING  shift 26
	.  error

	expr  goto 95


state 68
	stmt : LBRACE stmt_list RBRACE .  (12)

	.  reduce 12


state 69
	stmt_list : stmt_list stmt .  (7)

	.  reduce 7


state 70
	vdecl : typ . ID ASSIGN expr SEMI  (5)

	ID  shift 96
	.  error


state 71
	stmt : RETURN expr SEMI .  (13)

	.  reduce 13


state 72
	stmt : IF LPAREN expr . RPAREN stmt  (14)
	stmt : IF LPAREN expr . RPAREN stmt elseif_list ENDELIF  (15)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (16)
	stmt : IF LPAREN expr . RPAREN stmt elseif_list ELSE stmt  (17)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	RPAREN  shift 97
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	.  error


state 73
	stmt : FOR LPAREN expr . IN expr RPAREN stmt  (19)
	expr_opt : expr .  (34)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	IN  shift 98
	SEMI  reduce 34


state 74
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (18)

	SEMI  shift 99
	.  error


state 75
	stmt : WHILE LPAREN expr . RPAREN stmt  (20)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	RPAREN  shift 100
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	.  error


state 76
	expr : ID LPAREN list_opt . RPAREN  (60)

	RPAREN  shift 101
	.  error


state 77
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LT expr  (48)
	expr : expr . LEQ expr  (49)
	expr : expr . GT expr  (50)
	expr : expr . GEQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : ID LBRACKET expr . RBRACKET ASSIGN expr  (57)
	expr : ID LBRACKET expr . RBRACKET  (58)

	RBRACKET  shift 102
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	.  error


state 78
	expr : ID DOT ID . LPAREN list_opt RPAREN  (62)

	LPAREN  shift 103
	.  error

